Feat: Refactor remaining views